force-app/main/default/objects/Property_Manager_Questionnaire__c/Property_Manager_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Property Manager Questionnaire</label>
    <nameField>
        <displayFormat>PMQ-{0000000}</displayFormat>
        <label>Property Manager Questionnaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Manager Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>