force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Additional_Factors_Comment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Factors_Comment__c</fullName>
    <label>Additional Factors Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>