force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Additional_Factors_to_provide__c.field-meta.xml
<CustomField>
    <fullName>Additional_Factors_to_provide__c</fullName>
    <label>Additional factors to provide</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>