force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Annual_Maintenance_CapEx_expenses__c.field-meta.xml
<CustomField>
    <fullName>Annual_Maintenance_CapEx_expenses__c</fullName>
    <label>Annual Maintenance &amp; CapEx expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>