force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Average_Lease_upMarketing_Fees_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Average_Lease_upMarketing_Fees_Turnover__c</fullName>
    <label>Average Lease-up/Marketing Fees Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>