force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Average_Monthly_Rent_SFR__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Rent_SFR__c</fullName>
    <label>Average Monthly Rent SFR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>