force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Average_Occupany_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Occupany_Rate__c</fullName>
    <label>Average Occupany Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>