force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Average_Rent_Growth__c.field-meta.xml
<CustomField>
    <fullName>Average_Rent_Growth__c</fullName>
    <label>Average Rent Growth %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>