force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Average_Time_for_Renovations__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_for_Renovations__c</fullName>
    <label>Average Time for Renovations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>