force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Average_Time_of_Tenancy__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_of_Tenancy__c</fullName>
    <label>Average Time of Tenancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>