force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Average_Time_of_Tenancy_Section_8_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_of_Tenancy_Section_8_Tenant__c</fullName>
    <label>Average Time of Tenancy Section 8 Tenant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>