force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Average_Time_to_Lease_a_Property__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_to_Lease_a_Property__c</fullName>
    <label>Average Time to Lease a Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>