force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Average_Total_Number_Condo_Asc__c.field-meta.xml
<CustomField>
    <fullName>Average_Total_Number_Condo_Asc__c</fullName>
    <label>Average Total Number Condo Asc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>