force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Bankruptcy_History__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_History__c</fullName>
    <label>Bankruptcy History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>