force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/BBB_Complaints_Explanation__c.field-meta.xml
<CustomField>
    <fullName>BBB_Complaints_Explanation__c</fullName>
    <label>BBB Complaints Explanation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>