force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Manager Questionnaires</relationshipLabel>
    <relationshipName>Property_Manager_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>