force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Borrower_Average_Timeline_for_Eviction__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Average_Timeline_for_Eviction__c</fullName>
    <label>Borrower Average Timeline for Eviction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>