force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Borrower_Evictions_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Evictions_Last_12_Months__c</fullName>
    <label>Borrower Evictions Last 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>