force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Capital_Expenditure_Select_All__c.field-meta.xml
<CustomField>
    <fullName>Capital_Expenditure_Select_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capital Expenditure Select All</label>
    <type>Checkbox</type>
</CustomField>