force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Capital_Expenditure_Select_All_Val__c.field-meta.xml
<CustomField>
    <fullName>Capital_Expenditure_Select_All_Val__c</fullName>
    <label>Capital Expenditure Select All Val</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>