force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Collection_Rate__c.field-meta.xml
<CustomField>
    <fullName>Collection_Rate__c</fullName>
    <label>Collection Rate %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>