force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Date_of_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Questionnaire__c</fullName>
    <label>Date of Questionnaire</label>
    <type>Date</type>
</CustomField>