force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Property Manager Questionnaires</relationshipLabel>
    <relationshipName>Property_Manager_Questionnaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>