force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Eviction_History__c.field-meta.xml
<CustomField>
    <fullName>Eviction_History__c</fullName>
    <label>Eviction History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>