force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Income_to_Rent_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Income_to_Rent_Ratio__c</fullName>
    <label>Income to Rent Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>