force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Marketing_Resource_2__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Resource_2__c</fullName>
    <label>Marketing Resource 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>