force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Minimum_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Credit_Score__c</fullName>
    <label>Minimum Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>