force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/MSA_License_Number__c.field-meta.xml
<CustomField>
    <fullName>MSA_License_Number__c</fullName>
    <label>MSA License Number</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>