force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/MSAs__c.field-meta.xml
<CustomField>
    <fullName>MSAs__c</fullName>
    <label>MSAs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>