force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Multifamily_Capital_Expenditures__c.field-meta.xml
<CustomField>
    <fullName>Multifamily_Capital_Expenditures__c</fullName>
    <label>Multifamily Capital Expenditures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>