force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Multifamily_Turnover_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Multifamily_Turnover_Maintenance__c</fullName>
    <label>Multifamily Turnover Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>