force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/New_Leases_Found_By_Internal_v_External__c.field-meta.xml
<CustomField>
    <fullName>New_Leases_Found_By_Internal_v_External__c</fullName>
    <label>New Leases Found By Internal v External</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>