force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Number_of_Units_in_Management__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_in_Management__c</fullName>
    <label>Number of Units in Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>