force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Number_of_Units_Manage_for_BorrowerSelf__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_Manage_for_BorrowerSelf__c</fullName>
    <label>Number of Units Manage for Borrower/Self</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>