force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Other_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Other_Criteria__c</fullName>
    <label>Other Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>