force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property Manager Questionnaires</relationshipLabel>
    <relationshipName>Property_Manager_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>