force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Property_Manager__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Property Manager Questionnaires (Property Manager)</relationshipLabel>
    <relationshipName>Property_Manager_Questionnaire1</relationshipName>
    <type>Lookup</type>
</CustomField>