force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Property_Manager_Portal_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Manager_Portal_Id__c</fullName>
    <label>Property Manager Portal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>