force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5+ unit multi-family (if applicable)</fullName>
            </value>
            <value>
                <fullName>SFR/Condos/Townhomes (with HOA) (if applicable)</fullName>
            </value>
            <value>
                <fullName>SFR, Townhomes and/or 2-4 units (without HOA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>