force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Received_BBBsimilar_complaints__c.field-meta.xml
<CustomField>
    <fullName>Received_BBBsimilar_complaints__c</fullName>
    <label>Received BBB/similar complaints</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>