force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Repair_and_Maintenance_Select_All__c.field-meta.xml
<CustomField>
    <fullName>Repair_and_Maintenance_Select_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repair and Maintenance Select All</label>
    <type>Checkbox</type>
</CustomField>