force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Repair_Maintenance_Select_All_Val__c.field-meta.xml
<CustomField>
    <fullName>Repair_Maintenance_Select_All_Val__c</fullName>
    <label>Repair &amp; Maintenance Select All Val</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>