force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/SFR_Repair_Maintenance_without_HOA__c.field-meta.xml
<CustomField>
    <fullName>SFR_Repair_Maintenance_without_HOA__c</fullName>
    <label>SFR Repair &amp; Maintenance without HOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>