force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Tenants_Charged_a_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Tenants_Charged_a_Late_Fee__c</fullName>
    <label>Tenants Charged a Late Fee %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>