force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Total_Cure_Rate_for_Eviction_Notices__c.field-meta.xml
<CustomField>
    <fullName>Total_Cure_Rate_for_Eviction_Notices__c</fullName>
    <label>Total Cure Rate for Eviction Notices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>