force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Total_Number_of_MSAs__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_MSAs__c</fullName>
    <label>Total Number of MSAs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>