force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Turnover_Maintenance_Select_All__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Maintenance_Select_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turnover Maintenance Select All</label>
    <type>Checkbox</type>
</CustomField>