force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Type_of_Insurance_and_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Insurance_and_Coverage__c</fullName>
    <label>Type of Insurance and Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>