force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Years_Company_Managing_Commercial_Props__c.field-meta.xml
<CustomField>
    <fullName>Years_Company_Managing_Commercial_Props__c</fullName>
    <label>Years Company Managing Commercial Props</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>