force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Years_in_CPM_Management__c.field-meta.xml
<CustomField>
    <fullName>Years_in_CPM_Management__c</fullName>
    <label>Years in CPM Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>