force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Years_in_CRM_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_CRM_Business__c</fullName>
    <label>Years in CRM Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>