force-app/main/default/objects/Property_Manager_Questionnaire__c/fields/Years_Managed_for_BorrowerSelf__c.field-meta.xml
<CustomField>
    <fullName>Years_Managed_for_BorrowerSelf__c</fullName>
    <label>Years Managed for Borrower/Self</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>